
[workspace]
resolver = "2"


members = [
    "lantern_extras",
    "lantern_utils",
    "lantern_logger",
    "lantern_external_index",
    "lantern_embeddings",
    "lantern_embeddings_core",
    "lantern_cli",
    "lantern_daemon",
    "lantern_index_autotune",
]

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
panic = "unwind"

