[package]
name = "lantern_cli"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "lantern-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.91"
postgres = "0.19.9"
rand = "0.8.5"
linfa-clustering = { version = "0.7.0", features = ["ndarray-linalg"], optional = true }
linfa = {version = "0.7.0", optional = true}
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = { version="1.10.0", optional = true }
md5 = {version="0.7.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
gcp_auth = {version="0.10.0", optional = true}
serde_json = "1.0.132"
tokio-postgres = { version="0.7.12", optional = true }
futures = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
lazy_static = "1.5.0"
itertools = "0.13.0"
csv = "1.3.0"
sysinfo = "0.29.11"
tiktoken-rs = "0.6.0"
url = "2.5"
num_cpus = "1.16.0"
ort = { version = "1.16.3", features = ["load-dynamic", "cuda", "openvino"] }
tokenizers = { version = "0.20.1", features = ["default"] }
image = { version = "0.25.4", features = ["jpeg", "png", "webp" ]}
nvml-wrapper = "0.10.0"
strum = { version = "0.26", features = ["derive"] }
regex = "1.11.1"
postgres-types = { version = "0.2.8", features = ["derive"] }
usearch = { git = "https://github.com/Ngalstyan4/usearch.git", rev = "aa4f91d21230fd611b6c7741fa06be8c20acc9a9" }
actix-web = { version = "4.9.0", optional = true }
env_logger = { version = "0.11.5", optional = true }
deadpool-postgres = { version = "0.14.0", optional = true }
deadpool = { version = "0.12.1", optional = true}
bytes = { version = "1.8.0", optional = true}
utoipa = { version = "5.1.3", optional = true}
utoipa-swagger-ui = { version = "8.0.3", features = ["actix-web"], optional = true }
actix-web-httpauth = { version = "0.8.2", optional = true }
tokio-util = "0.7.12"
bitvec = { version="1.0.1", optional=true }
rustls = { version="0.23.16", optional=true }
rustls-pemfile = { version="2.2.0", optional=true }
glob = { version="0.3.1", optional=true }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "blocking", "rustls-tls"] }

[features]
default = ["cli", "daemon", "http-server", "autotune", "pq", "external-index", "external-index-server", "embeddings"]
daemon = ["dep:tokio-postgres"]
http-server = ["dep:deadpool-postgres", "dep:deadpool", "dep:bytes", "dep:utoipa", "dep:utoipa-swagger-ui", "dep:actix-web", "dep:tokio-postgres", "dep:env_logger", "dep:actix-web-httpauth"]
autotune = []
pq = ["dep:gcp_auth", "dep:linfa", "dep:linfa-clustering", "dep:md5", "dep:rayon"]
cli = []
external-index = []
external-index-server = ["dep:bitvec", "dep:rustls", "dep:rustls-pemfile", "dep:glob"]
embeddings = ["dep:bytes"]

[lib]
doctest = false
