[package]
name = "lantern_create_index"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true
opt-level = 3

[[bin]]
name = "lantern-create-index"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
cxx = "1.0.106"
postgres-types = { version = "0.2.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full" ] }
tokio-postgres = "0.7.10"
usearch = { git = "https://github.com/Ngalstyan4/usearch.git", branch = "pg-rebase" }
