[package]
name = "lantern_create_index"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true
opt-level = 3

[[bin]]
name = "lantern-create-index"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
cxx = "1.0.106"
postgres = "0.19.7"
postgres-types = { version = "0.2.6", features = ["derive"] }
usearch = { git = "https://github.com/Ngalstyan4/usearch.git", branch = "pg-rebase" }
