[package]
name = "lantern_daemon"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
tokio-postgres = "0.7.10"
lantern_embeddings = { path = "../lantern_embeddings" }
futures = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }
lantern_logger = { path = "../lantern_logger" }
lantern_utils = { path = "../lantern_utils" }
lazy_static = "1.4.0"
itertools = "0.11.0"
