[package]
name = "lantern_embeddings"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
postgres = "0.19.7"
csv = "1.3.0"
lantern_embeddings_core = { path = "../lantern_embeddings_core" }
lantern_logger = { path = "../lantern_logger" }
lantern_utils = { path = "../lantern_utils" }
rand = "0.8.5"
