[package]
name = "lantern_embeddings_core"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["blocking"] }
itertools = "0.11"
ndarray = "0.15.0"
url = "2.2"
num_cpus = "1.15.0"
ort = { version = "1.16.0", features = ["load-dynamic", "cuda", "openvino"] }
tokenizers = "0.13.2"
image = "0.24.6"
lazy_static = "1.4.0"
anyhow = "1.0.75"
tokio = { version = "1.33.0", features=["rt-multi-thread", "fs"]}
futures = "0.3.28"
